kyverno-policies/inject-sidecar.yaml
# based on: https://kyverno.io/policies/other/inject-sidecar-deployment/inject-sidecar-deployment/
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: inject-sidecar
  annotations:
    policies.kyverno.io/title: Inject Sidecar Container
    policies.kyverno.io/category: Sample
    policies.kyverno.io/subject: Deployment,Volume
    policies.kyverno.io/minversion: 1.6.0
    policies.kyverno.io/description: >-
      The sidecar pattern is very common in Kubernetes whereby other applications can
      insert components via tacit modification of a submitted resource. This is, for example,
      often how service meshes and secrets applications are able to function transparently.
      This policy injects a sidecar containern and adds an annotation and label.
spec:
  rules:
  - name: inject-sidecar
    match:
      any:
      - resources:
          kinds:
          - Pod
    mutate:
      patchStrategicMerge:
        spec:
          template:
            metadata:
              annotations:
                (foo): "bar"
              labels:
                (foo): "bar"
            spec:
              containers:
              - name: busybox
                image: busybox
                imagePullPolicy: IfNotPresent
